@@ -216,6 +216,8 @@ Library
 Extension Modules
 -----------------
 
+- Issue #7078: Set struct.__doc__ from _struct.__doc__.
+
 - Issue #3366: Add gamma function to math module.
 
 - Issue #6877: It is now possible to link the readline extension to the
